--- a/resources/css/input.css
+++ b/resources/css/input.css
@@ -7,6 +7,6 @@
 }
 
 .input-primary-outline{
-    @apply bg-[#fff] focus:bg-[#fff] border-alerange focus:border-alerange;
+    @apply bg-[#fff] focus:bg-[#f06a6a] border-alerange focus:border-alerange;
     @apply file:bg-alerange focus:text-white file:rounded-md file:p-2
 }
