--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 @import "input.css";
+@import "button.css";
+@import "sidebar.css";
 
 .flex::before,
 .flex::after {
